# vulkan-android

./: .gitmodules  README.md
.circleci/: config.yml
.github/workflows/: main.yml
01_vulkanTriangle/: settings.gradle
01_vulkanTriangle/app/: CMakeLists.txt  build.gradle
01_vulkanTriangle/app/src/main/: AndroidManifest.xml
01_vulkanTriangle/app/src/main/cpp/: VulkanRenderer.cpp  VulkanRenderer.h
01_vulkanTriangle/app/src/main/jni/: AndroidMain.cpp  VulkanMain.cpp
01_vulkanTriangle/app/src/main/res/values/: strings.xml
01_vulkanTriangle/app/src/main/shaders/: tri.frag  tri.vert
02_vulkanCubeIndexBuffer/: settings.gradle
02_vulkanCubeIndexBuffer/app/: CMakeLists.txt  build.gradle
02_vulkanCubeIndexBuffer/app/src/androidTest/java/com/example/vulkancuberindexbuffer/: ExampleInstrumentedTest.java
02_vulkanCubeIndexBuffer/app/src/main/: AndroidManifest.xml
02_vulkanCubeIndexBuffer/app/src/main/java/com/example/vulkancubeindexbuffer/: MainActivity.java
02_vulkanCubeIndexBuffer/app/src/main/jni/: VulkanMain.cpp
02_vulkanCubeIndexBuffer/app/src/main/res/values/: strings.xml
02_vulkanCubeIndexBuffer/app/src/main/shaders/: tri.frag  tri.vert
02_vulkanCubeIndexBuffer/app/src/test/java/com/example/vulkancuberindexbuffer/: ExampleUnitTest.java
03_vulkanProjection/: settings.gradle
03_vulkanProjection/app/: CMakeLists.txt  build.gradle
03_vulkanProjection/app/src/main/: AndroidManifest.xml
03_vulkanProjection/app/src/main/jni/: VulkanMain.cpp
03_vulkanProjection/app/src/main/res/values/: strings.xml
03_vulkanProjection/app/src/main/shaders/: uniform.vert
04_vulkanTextureMapping/: settings.gradle
04_vulkanTextureMapping/app/: CMakeLists.txt  build.gradle
04_vulkanTextureMapping/app/src/main/: AndroidManifest.xml
04_vulkanTextureMapping/app/src/main/jni/: AndroidMain.cpp  VulkanMain.cpp  VulkanMain.h
04_vulkanTextureMapping/app/src/main/shaders/: texture.vert
04_vulkanTextureMapping/gradle/wrapper/: gradle-wrapper.properties
05_vulkanGLTF/: settings.gradle
05_vulkanGLTF/app/: CMakeLists.txt  build.gradle
05_vulkanGLTF/app/src/androidTest/java/com/example/vulkancuberindexbuffer/: ExampleInstrumentedTest.java
05_vulkanGLTF/app/src/main/: AndroidManifest.xml
05_vulkanGLTF/app/src/main/java/com/example/vulkanprojection/: MainActivity.java
05_vulkanGLTF/app/src/main/jni/: AndroidMain.cpp  VulkanMain.cpp
05_vulkanGLTF/app/src/main/jniLibs/: README.md
05_vulkanGLTF/app/src/main/res/values/: strings.xml
05_vulkanGLTF/app/src/main/shaders/: uniform.frag  uniform.vert
05_vulkanGLTF/app/src/test/java/com/example/vulkancuberindexbuffer/: ExampleUnitTest.java
05_vulkanGLTF/gradle/wrapper/: gradle-wrapper.properties
common/renderer/: Cube.cpp  Cube.h  Object.cpp  Object.h  RenderSurface.cpp  RenderSurface.h  VulkanRenderer.cpp  VulkanRenderer.h
common/renderer/component/: Component.cpp  Component.h  Material.cpp  Material.h
common/utils/: Logger.h  Platform.cpp  Platform.h  utils.h
common/vulkan_wrapper/: vulkan_wrapper.cpp  vulkan_wrapper.h
unittests/: settings.gradle
unittests/app/: CMakeLists.txt  build.gradle
unittests/app/src/androidTest/java/com/example/vulkanTests/: ExampleInstrumentedTest.java  GTestRunnerTests.java
unittests/app/src/main/: AndroidManifest.xml
unittests/app/src/main/java/com/example/vulkanTests/: GTestRunner.java  MainActivity.java
unittests/app/src/main/jni/: GTestRunner.hpp  GTestRunnerJNI.cpp  VulkanMain.cpp  VulkanMain.h
unittests/app/src/main/res/values/: strings.xml
unittests/app/src/test/cpp/: Tests.cpp
unittests/app/src/test/java/com/example/vulkanTests/: ExampleUnitTest.java
unittests/gradle/wrapper/: gradle-wrapper.properties
(+10 files in other folders)
